--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
-    "near-api-js": "^1.0.0"
+    "near-api-js": "^1.0.0",
+    "pg": "^8.8.0"
   }
 }
