--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
     "near-api-js": "^1.0.0",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "sharp": "^0.30.7"
   }
 }
