sets back height to 100vh

--- a/src/projectConfig.json
+++ b/src/projectConfig.json
@@ -1,5 +1,5 @@
 {
-  "test": "3",
-  "contractName": "nft.soundsplash.testnet",
-  "admin": "daorecords.near"
+  "test": "32",
+  "contractName": "admintest1.soundsplash.testnet",
+  "admin": "daorecords.testnet"
 }
