--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "1.1.0",
     "react-toastify": "^8.1.0",
+    "regenerator-runtime": "~0.13.5",
     "uint8arrays": "^3.0.0"
   },
   "resolutions": {
